--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using _2nd_Team_Week_MVC
+﻿@* @using _2nd_Team_Week_MVC
 @using _2nd_Team_Week_MVC.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers *@
