Update user views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Botanical Adventure</h1>
+</div>
+
+<div class="text-center">
+    <h3 class="display-4">@Html.ActionLink("Register", "Register", "Users")</h3>
+    <h3 class="display-4">@Html.ActionLink("Log In", "Login", "Users")</h3>
+    <h3 class="display-4">@Html.ActionLink("Instructions", "Instructions")</h3>
 </div>
