--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
 
@@ -6,5 +6,5 @@
 @using System;
 
 
-<h3>@Html.DisplayNameFor(model => model.ItemName)</h3>
+<h3>@Html.DisplayNameFor(model => model.ItemName)</h3> *@
 
