fix Item Cat view

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -12,11 +12,19 @@
         <button type="submit" name="button" value="ActionOne" class="ItemCatBttn" style="border-style: none;">
         <img src="css/assets/img/forest-category.png" width="150px"/><br>Forest</button>
   }
-  @using (Html.BeginForm("Category", "Items", new { cat = "coast"}))   
+   @using (Html.BeginForm("Category", "Items", new { cat = "Coast"}))   
   {
         <button type="submit" name="button" value="ActionOne" class="ItemCatBttn" style="border-style: none;">
         <img src="css/assets/img/coast-category.png" width="150px"/><br>Coast</button>
   }
+
+
+
+  @* @using (Html.BeginForm("Category", "Items", new { cat = "coast"}))   
+  {
+        <button type="submit" name="button" value="ActionOne" class="ItemCatBttn" style="border-style: none;">
+        <img src="css/assets/img/coast-category.png" width="150px"/><br>Coast</button>
+  } *@
 </div>
 
 
