--- a/Views/Items/Category.cshtml
+++ b/Views/Items/Category.cshtml
@@ -2,7 +2,6 @@
 	Layout = "_Layout";
 }
 @using ForageMvc.Models
-@using System;
 
 <h3>Select Difficulty Level:</h3>
 <form id="DifficultyLevel">
@@ -53,7 +52,7 @@ window.addEventListener("load", function() {
     if (item.Difficulty == "easy")
     {
 		<li>
-			<p>@item.Name | @item.Category | @item.Difficulty | <img src ="${@item.Picture}"> </p>
+			<p>@item.Name | @item.Category | @item.Difficulty </p>
 		</li>
 		<br>
     }
@@ -62,18 +61,16 @@ window.addEventListener("load", function() {
 </div>
 
 <div id="medium">
-<ul>
 	@foreach (Item item in Model)
 	{
     if (item.Difficulty == "medium")
     {
-		<li>
-			<p>@item.Name | @item.Category | @item.Difficulty</p>
-		</li>
-		<br>
+    @using (Html.BeginForm("Details", "Items", new { id = item.ItemId}))   
+    {
+      <button type="submit"> <img src="@Url.Content(item.Picture)" width="150px"/><br>@item.Name</button>
     }
-	}
-</ul>
+    }
+  }
 </div>
 
 <div id="hard">
@@ -83,7 +80,7 @@ window.addEventListener("load", function() {
     if (item.Difficulty == "hard")
     {
 		<li>
-			<p>@item.Name | @item.Category | @item.Difficulty</p>
+			<p>@item.Name | @item.Category | @item.Picture</p>
 		</li>
 		<br>
     }
