--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -91,9 +91,22 @@ body {
 #easy {
   display: none;
 }
-/* #medium {
-  display:none;
-} */
+#medium {
+  margin-left: 10%;
+}
+#medium button {
+  color: aliceblue;
+  margin-top: 10%;
+  margin-left: 1%;
+  border-style: none;
+  float:left;
+  background-color: darkgreen;
+}
+#medium button img {
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 10%;
+}
 #hard {
   display:none;
 }
