--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -1,15 +1,16 @@
 @{
   Layout = "_Layout";
 } 
+<head> <link rel="stylesheet" href="~/css/site.css"> </head>
 
 @model ForageMvc.Models.Item
 @using System; 
 @using System.Web; 
 @using ForageMvc.Models
 
-
-<h3>@Model.Name</h3>
-<iframe src="https://drive.google.com/file/d/1A0oevkGY-IK7YuTt1bqD6Z2wet2NLD44/preview" width="640" height="480" allow="autoplay"></iframe>
+<h3 id="Name">@Model.Name</h3>
+<iframe src="@Url.Content(Model.Picture)" width="640" height="480" allow="autoplay"></iframe>
+<div id="details">
 <p>@Model.Type</p>
 <p>Botanical Name:<br> @Model.Latin</p>
 <p>Description:<br> @Model.Description</p>
@@ -39,3 +40,4 @@ else
   @Html.Label("Found")
   @Html.EditorFor(model => model.Found)
 }
+</div>
