--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -1,12 +1,13 @@
 @{
 	Layout = "_Layout";
 }
+<head> <link rel="stylesheet" href="~/css/site.css"> </head>
 
 <h3 id="item-heading">Which Oregon ecosystem are you exploring?</h3>
 <div id="cat-buttons">
   @using (Html.BeginForm("Category", "Items", new { cat = "desert"}))   
   {
-        <button type="submit" name="button" value="ActionOne" class="ItemCatBttn" style="border-style: none;"><img src="css/assets/img/desert-category.png" width="150px"/><br>Desert</button>
+        <button type="submit" name="button" value="ActionOne" class="ItemCatBttn" style="border-style: none;"><img id ="img" src="css/assets/img/desert-category.png" width="150px"/><br>Desert</button>
   }
   @using (Html.BeginForm("Category", "Items", new { cat = "forest"}))   
   {
