--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -13,6 +13,9 @@
           <p>@Html.ActionLink("Account", "Index", "Users", null, new { @class ="text-decoration-none text-light mx-2"}) </p>
           @*link to account index (users homepage)*@
         </li>
+        <li class="nav-item">
+        <p>@Html.ActionLink("Log Out", "LogOff", "Users", null, new {@class = "text-decoration-none text-light mx-2"})</p>
+        </li>
       </ul>
     </div>
   </div>
