--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,41 +74,109 @@ body {
 
 /* Item Views
 -------------------------------------------------- */
+#select {
+  width: 100px;
+  margin: 15px;
+  background-color: rgba(235, 235, 235, 0.7);
+}
+
+#button {
+  background-color: rgba(235, 235, 235, 0.7);
+}
+
 .ItemCatBttn {
   float: left;
   display: block-inline;
   padding: 10px;
   margin: 10px;
-  background-color: rgb(219, 219, 219);
-  opacity: .7;
-}
-#img {
+  background-color: rgba(235, 235, 235, 0.7);
   opacity: 1;
+
 }
+
 #cat-buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: translateY(150%);
+  
+}
+#d-heading span{
+  background-color: rgba(235, 235, 235, 0.7);
+  border-radius: 1em;
+  padding: 0.5em;
+  margin-top: 100px; 
+}
+
+#center-cat {
+  text-align: center;
+  transform: translateY(100%);
+  border-radius: 1em;
+  align-content: center;
+
 }
 
 #item-heading {
   text-align: center;
+  transform: translateY(500%);
+  border-radius: 1em;
+  align-content: center;
+}
+
+#item-heading span {
+  background-color: rgba(235, 235, 235, 0.7);
+  border-radius: 1em;
+  padding: 0.5em; 
 }
 .hidden {
   display: none;
 }
 #medium {
-  margin-left: 23%;
+  margin-left: 27%;
 }
 #medium h6 {
   color: aliceblue;
-  margin-top: 10%;
+  margin-top: 15%;
   margin-left: 1%;
   border-style: none;
   float:left;
   background-color: darkgreen;
 }
 #medium h6 img {
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 10%;
+}
+
+#easy {
+  margin-left: 27%;
+}
+#easy h6 {
+  color: aliceblue;
+  margin-top: 15%;
+  margin-left: 1%;
+  border-style: none;
+  float:left;
+  background-color: darkgreen;
+}
+#easy h6 img {
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 10%;
+}
+
+#hard {
+  margin-left: 27%;
+}
+#hard h6 {
+  color: aliceblue;
+  margin-top: 15%;
+  margin-left: 1%;
+  border-style: none;
+  float:left;
+  background-color: darkgreen;
+}
+#hard h6 img {
   padding-left: 10%;
   padding-right: 10%;
   margin-top: 10%;
@@ -150,7 +218,7 @@ body {
   width: 640px;
 }
 
-/* #Name {
+#Name {
   color: black;
   background-color: white;
   outline: green;
@@ -158,4 +226,59 @@ body {
   padding: 0.5em 0.5em; 
   opacity: .80;
   width: 640px;
-} */
+}
+
+.details-container {
+  margin-left: 31%;
+}
+
+.mascot {
+  align-content: center;
+  position: absolute;
+  top: 15%;
+  margin-left: 70%;
+}
+
+h6 a {
+  color: white;
+}
+
+h6 a:hover {
+  color: rgb(163, 255, 127);
+}
+
+#cat-link {
+  text-align: center;
+  transform: translateY(500%);
+  border-radius: 1em;
+  align-content: center;
+}
+
+#cat-link span {
+  background-color: rgba(235, 235, 235, 0.7);
+  border-radius: 1em;
+  padding: 0.5em; 
+}
+
+
+
+#cat-link a {
+  color: black;
+}
+
+#cat-link a:hover {
+  color: rgb(163, 255, 127);
+}
+
+#details-link {
+  text-align: center;
+  transform: translateY(500%);
+  border-radius: 1em;
+  align-content: center;
+}
+
+#details-link span {
+  background-color: rgba(235, 235, 235, 0.7);
+  border-radius: 1em;
+  padding: 0.5em; 
+}
